Update the Windows installer builder. This version works!